--- a/pages/header.html
+++ b/pages/header.html
@@ -1,46 +1,84 @@
-<div
-  class="container mx-auto p-4 flex items-center justify-between bg-amber-400"
->
-  <div class="flex items-center gap-3 md:gap-8">
-    <!-- Mobile menu button -->
-    <span class="w-6 h-9 relative cursor-pointer group" id="burgerIcon">
+<div class="w-full p-4 fixed z-50 backdrop-blur-md text-white">
+  <div class="container mx-auto flex items-center justify-between">
+    <div class="flex items-center gap-3 md:gap-8">
+      <!-- Mobile menu button -->
       <span
-        class="h-[1px] absolute left-0 top-3 w-full bg-black duration-300 group-[.active]:rotate-45 group-[.active]:translate-y-2"
-      ></span>
-      <span
-        class="h-[1px] absolute left-0 top-5 w-full bg-black duration-300 group-[.active]:opacity-0"
-      ></span>
-      <span
-        class="h-[1px] absolute left-0 top-7 w-full bg-black duration-300 group-[.active]:-rotate-45 group-[.active]:-translate-y-2"
-      ></span>
-    </span>
+        class="md:hidden w-6 h-9 relative cursor-pointer group"
+        id="burgerIcon"
+      >
+        <span
+          class="h-[1px] absolute left-0 top-3 w-full bg-white duration-300 group-[.active]:rotate-45 group-[.active]:translate-y-2"
+        ></span>
+        <span
+          class="h-[1px] absolute left-0 top-5 w-full bg-white duration-300 group-[.active]:opacity-0"
+        ></span>
+        <span
+          class="h-[1px] absolute left-0 top-7 w-full bg-white duration-300 group-[.active]:-rotate-45 group-[.active]:-translate-y-2"
+        ></span>
+      </span>
 
-    <!-- Logo -->
-    <a href="#home" class="text-3xl font-bold italic"> SonicC </a>
+      <!-- Logo -->
+      <a href="#home" class="text-4xl font-bold italic text-orange-500">SonicC</a>
 
-    <!-- Desktop Nav -->
-    <nav
-      class="hidden md:flex items-center gap-2 text-sm lg:text-base lg:gap-6"
-    >
-      <a class="nav-link" href="#home">Home</a>
-      <a class="nav-link" href="#cars">Cars</a>
-      <a class="nav-link" href="#about">About Us</a>
-    </nav>
+      <!-- Desktop Nav -->
+      <nav
+        class="hidden md:flex items-center gap-5 text-sm lg:text-base lg:gap-6"
+      >
+        <a
+          class="hover:text-orange-600 hover:border-b-orange-600 border-b border-b-transparent transition-colors text-lg font-bold"
+          href="#home"
+          >Home</a
+        >
+        <a
+          class="hover:text-orange-600 hover:border-b-orange-600 border-b border-b-transparent transition-colors text-lg font-bold"
+          href="#cars"
+          >Cars</a
+        >
+        <a
+          class="hover:text-orange-600 hover:border-b-orange-600 border-b border-b-transparent transition-colors text-lg font-bold"
+          href="#about"
+          >About Us</a
+        >
+      </nav>
+    </div>
+    <div class="flex items-center gap-4">
+      <div class="hidden md:block">
+        <input
+          type="search"
+          placeholder="Search..."
+          id="search-input"
+          class="w-full py-1 px-2 rounded-xl outline-none border border-gray-400 bg-transparent text-white"
+        />
+      </div>
+      <div id="authBtn">
+        
+        
+      </div>
+    </div>
   </div>
 </div>
 
 <!-- Mobile Menu -->
-<div id="mobile-menu"
-  class="origin-top scale-y-0 opacity-0 fixed left-0 right-0 top-16 z-40 transition-all duration-300 ease-out shadow-xl">
-  <nav class="flex flex-col gap-2 p-4">
-      <a class="nav-link" href="#home">Home</a>
-      <a class="nav-link" href="#cars">Cars</a>
-      <a class="nav-link" href="#about">About Us</a>
+<div
+  id="mobile-menu"
+  class="md:hidden origin-top container mx-auto backdrop-blur-md border-b text-white border-gray-400 scale-y-0 opacity-0 fixed left-0 right-0 top-16 z-40 transition-all duration-300 ease-out shadow-xl"
+>
+  <nav class="flex flex-col gap-4 p-4">
+    <a class="nav-link" href="#home">Home</a>
+    <a class="nav-link" href="#cars">Cars</a>
+    <a class="nav-link" href="#about">About Us</a>
 
-    <div class="relative mt-4">
-      <input type="search" placeholder="Search..." id="mobile-search-input"
-        class="w-full p-3 pl-10 rounded-xl outline-none border border-transparent focus:border-(--onbg)/20" />
-      <div id="mobile-search-results" class="bg-white absolute w-full z-50 rounded-xl mt-1 left-0">
-      </div>
+    <div class="relative">
+      <input
+        type="search"
+        placeholder="Search..."
+        id="mobile-search-input"
+        class="w-full py-1 px-2 rounded-xl outline-none border border-gray-400 bg-transparent text-white"
+      />
+      <div
+        id="mobile-search-results"
+        class="bg-white absolute w-full z-50 rounded-xl mt-1 left-0"
+      ></div>
+    </div>
   </nav>
 </div>
