--- a/pages/register.html
+++ b/pages/register.html
@@ -1,3 +1,83 @@
-<div>
-  Register Page
-</div>
+<!-- Register page main section -->
+<section
+  class="h-screen flex items-center justify-center bg-[url('../assets/login-bg.jpg')] bg-cover bg-center overflow-hidden"
+>
+  <div
+    class="p-8 rounded-lg shadow-lg w-full max-w-md backdrop-blur-md text-white border border-orange-600 relative group"
+  >
+    <span
+      class="absolute -z-10 -top-9 -left-9 w-[calc(100%+100px)] h-[calc(100%+100px)] border-2 border-white rounded-[38%_62%_63%_37%/41%_44%_56%_59%] group-hover:animate-spin group-hover:[animation-duration:2s] group-hover:border-red-600"
+    ></span>
+
+    <span
+      class="absolute -z-10 -top-9 -left-9 w-[calc(100%+100px)] h-[calc(100%+100px)] border-2 border-white rounded-[41%_44%_56%_59%/38%_62%_63%_37%] group-hover:animate-spin group-hover:[animation-duration:3s] group-hover:border-yellow-400"
+    ></span>
+
+    <span
+      class="absolute -z-10 -top-9 -left-9 w-[calc(100%+100px)] h-[calc(100%+100px)] border-2 border-white rounded-[41%_44%_56%_59%/38%_62%_63%_37%] group-hover:animate-spin group-hover:[animation-duration:4s] group-hover:border-green-600"
+    ></span>
+
+    <h2 class="text-2xl font-bold mb-2 text-center">Register to SonicC</h2>
+    <!-- <p class="mb-1 text-center">asdasdas</p> -->
+
+    <form id="registerForm" class="space-y-2" >
+      <div>
+        <label for="name" class="block font-medium mb-1">Full Name</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          required
+          class="w-full px-3 py-1 rounded-lg border border-gray-600 focus:outline-none focus:ring-1 focus:ring-orange-600"
+        />
+      </div>
+
+      <div>
+        <label for="email" class="block font-medium mb-1">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          required
+          class="w-full px-3 py-1 rounded-lg border border-gray-600 focus:outline-none focus:ring-1 focus:ring-orange-600"
+        />
+      </div>
+
+      <div>
+        <label for="password" class="block font-medium mb-1">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          required
+          class="w-full px-3 py-1 rounded-lg border border-gray-600 focus:outline-none focus:ring-1 focus:ring-orange-600"
+        />
+      </div>
+
+      <div>
+        <label for="confirmPassword" class="block font-medium mb-1"
+          >Confirm Password</label
+        >
+        <input
+          type="password"
+          id="confirmPassword"
+          name="confirmPassword"
+          required
+          class="w-full px-3 py-1 rounded-lg border border-gray-600 focus:outline-none focus:ring-1 focus:ring-orange-600"
+        />
+      </div>
+
+      <button
+        type="submit"
+        class="w-full py-2 bg-orange-800 hover:bg-orange-600 text-white font-bold rounded-lg transition-colors"
+      >
+        Register
+      </button>
+    </form>
+
+    <p class="mt-4 text-center">
+      Already have an account?
+      <a href="#login" class="text-orange-600 hover:underline">Login</a>
+    </p>
+  </div>
+</section>
