Uploding Home Page

--- a/pages/header.html
+++ b/pages/header.html
@@ -1,4 +1,4 @@
-<div class="w-full p-4 fixed z-50 backdrop-blur-md text-white">
+<div class="w-full p-2 fixed z-50 backdrop-blur-md text-white">
   <div class="container mx-auto flex items-center justify-between">
     <div class="flex items-center gap-3 md:gap-8">
       <!-- Mobile menu button -->
@@ -18,7 +18,9 @@
       </span>
 
       <!-- Logo -->
-      <a href="#home" class="text-4xl font-bold italic text-orange-500">SonicC</a>
+      <a href="#home" class="text-4xl font-bold italic text-orange-500"
+        >SonicC</a
+      >
 
       <!-- Desktop Nav -->
       <nav
@@ -50,10 +52,7 @@
           class="w-full py-1 px-2 rounded-xl outline-none border border-gray-400 bg-transparent text-white"
         />
       </div>
-      <div id="authBtn">
-        
-        
-      </div>
+      <div id="authBtn"></div>
     </div>
   </div>
 </div>
