--- a/pages/home.html
+++ b/pages/home.html
@@ -1,12 +1,162 @@
-<section class="relative z-0 h-screen bg-[url('../assets/home-bg.jpg')] bg-cover bg-center flex items-center justify-center md:justify-start">
-<div class="absolute left-0 top-0 inset-0 bg-black opacity-60 -z-10"></div>
-    <div class="text-center text-white px-8">
-      <p class="text-xl max-w-3xl leading-10">
-        Your Journey Is Different, But Your Destination Is The Same: Success.
+<section
+  class="relative z-0 h-screen bg-[url('../assets/home-bg.jpg')] bg-cover bg-center flex items-center justify-center md:justify-start"
+>
+  <div class="absolute inset-0 bg-black opacity-60 -z-10"></div>
+  <div class="text-center text-white px-8 animate-side">
+    <p class="text-xl max-w-xl leading-10">
+      Your Journey Is Different, But Your Destination Is The Same: Success. We
+      Help You Achieve Your Goals With Speed And Precision.
+    </p>
+    <h1 class="text-4xl font-bold mt-4">Welcome To SonicC</h1>
+  </div>
+</section>
+<section class="bg-gray-900 py-16 px-4 min-h-screen">
+  <div class="max-w-7xl mx-auto">
+    <h2 class="text-4xl font-bold text-center text-white mb-16 tracking-tight">
+      Pick Your Way
+    </h2>
 
-        We Help You Achieve Your Goals With Speed And Precision.
-      </p>
-      <h1 class="text-4xl font-bold mt-4">Welcome To SonicC</h1>
+    <div class="grid gap-6">
+      <div
+        class="group animate-view sticky top-20 h-[500px] mx-auto w-full max-w-6xl rounded-lg shadow-lg overflow-hidden"
+      >
+        <div class="absolute inset-0">
+          <img
+            src="../assets/gallery1.jpg"
+            alt="Gallery Image 1"
+            class="w-full h-full object-cover group-hover:scale-110 duration-500"
+          />
+        </div>
+        <div class="absolute inset-0 bg-black opacity-20"></div>
+        <div
+          class="relative z-10 flex flex-col items-start justify-end gap-8 h-full p-4 md:p-10 text-white"
+        >
+          <h3 class="text-3xl font-bold">Mercedes-AMG GT R</h3>
+          <div class="flex gap-5 md:gap-12 font-bold sm:text-2xl">
+            <p class="flex flex-col gap-2">
+              <span>Price</span>
+              <span>$180,000</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Engine</span>
+              <span>4.0L V8</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Cylinders</span>
+              <span>8</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>HorsePower</span>
+              <span>630 HP</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div
+        class="group animate-view sticky top-20 h-[500px] mx-auto w-full max-w-6xl rounded-lg shadow-lg overflow-hidden"
+      >
+        <div class="absolute inset-0">
+          <img
+            src="../assets/gallery2.jpg"
+            alt="Gallery Image 1"
+            class="w-full h-full object-cover group-hover:scale-110 duration-500"
+          />
+        </div>
+        <div class="absolute inset-0 bg-black opacity-20"></div>
+        <div
+          class="relative z-10 flex flex-col items-start justify-end gap-8 h-full p-4 md:p-10 text-white"
+        >
+          <h3 class="text-3xl font-bold">Hyundai Accent</h3>
+          <div class="flex gap-5 md:gap-12 font-bold sm:text-2xl">
+            <p class="flex flex-col gap-2">
+              <span>Price</span>
+              <span>$20,000</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Engine</span>
+              <span>1.6L</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Cylinders</span>
+              <span>4</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>HorsePower</span>
+              <span>130 HP</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div
+        class="group animate-view sticky top-20 h-[500px] mx-auto w-full max-w-6xl rounded-lg shadow-lg overflow-hidden"
+      >
+        <div class="absolute inset-0">
+          <img
+            src="../assets/gallery3.jpg"
+            alt="Gallery Image 1"
+            class="w-full h-full object-cover group-hover:scale-110 duration-500"
+          />
+        </div>
+        <div class="absolute inset-0 bg-black opacity-20"></div>
+        <div
+          class="relative z-10 flex flex-col items-start justify-end gap-8 h-full p-4 md:p-10 text-white"
+        >
+          <h3 class="text-3xl font-bold">BMW 2 Series Coupe</h3>
+          <div class="flex gap-5 md:gap-12 font-bold sm:text-2xl">
+            <p class="flex flex-col gap-2">
+              <span>Price</span>
+              <span>$35,000</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Engine</span>
+              <span>3.0L</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Cylinders</span>
+              <span>6</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>HorsePower</span>
+              <span>320 HP</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div
+        class="group animate-view sticky top-20 h-[500px] mx-auto w-full max-w-6xl rounded-lg shadow-lg overflow-hidden"
+      >
+        <div class="absolute inset-0">
+          <img
+            src="../assets/gallery4.jpg"
+            alt="Gallery Image 1"
+            class="w-full h-full object-cover group-hover:scale-110 duration-500"
+          />
+        </div>
+        <div class="absolute inset-0 bg-black opacity-20"></div>
+        <div
+          class="relative z-10 flex flex-col items-start justify-end gap-8 h-full p-4 md:p-10 text-white"
+        >
+          <h3 class="text-3xl font-bold">Toyota Camry</h3>
+          <div class="flex gap-5 md:gap-12 font-bold sm:text-2xl">
+            <p class="flex flex-col gap-2">
+              <span>Price</span>
+              <span>$30,000</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Engine</span>
+              <span>3.5L</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>Cylinders</span>
+              <span>4</span>
+            </p>
+            <p class="flex flex-col gap-2">
+              <span>HorsePower</span>
+              <span>301 HP</span>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-
+  </div>
 </section>
