Updateing Home Page

--- a/pages/home.html
+++ b/pages/home.html
@@ -22,7 +22,7 @@
       >
         <div class="absolute inset-0">
           <img
-            src="../assets/gallery1.jpg"
+            src="./assets/gallery1.jpg"
             alt="Gallery Image 1"
             class="w-full h-full object-cover group-hover:scale-110 duration-500"
           />
@@ -57,8 +57,8 @@
       >
         <div class="absolute inset-0">
           <img
-            src="../assets/gallery2.jpg"
-            alt="Gallery Image 1"
+            src="./assets/gallery2.jpg"
+            alt="Gallery Image 2"
             class="w-full h-full object-cover group-hover:scale-110 duration-500"
           />
         </div>
@@ -92,8 +92,8 @@
       >
         <div class="absolute inset-0">
           <img
-            src="../assets/gallery3.jpg"
-            alt="Gallery Image 1"
+            src="./assets/gallery3.jpg"
+            alt="Gallery Image 3"
             class="w-full h-full object-cover group-hover:scale-110 duration-500"
           />
         </div>
@@ -127,8 +127,8 @@
       >
         <div class="absolute inset-0">
           <img
-            src="../assets/gallery4.jpg"
-            alt="Gallery Image 1"
+            src="./assets/gallery4.jpg"
+            alt="Gallery Image 4"
             class="w-full h-full object-cover group-hover:scale-110 duration-500"
           />
         </div>
