Updateing cars Page

--- a/pages/cars.html
+++ b/pages/cars.html
@@ -1,3 +1,18 @@
 
-    <div class="h-dvh w-full bg-red-400"></div>
+    <div id="cars-container" class="py-16 bg-zinc-950">
+        <div class="sticky top-16 flex flex-wrap justify-center gap-4 text-white ">
+            <button class="cursor-pointer">Clear</button>
+            <button class="cursor-pointer">Toyota</button>
+            <button class="cursor-pointer">Honda</button>
+            <button class="cursor-pointer">Hyundai</button>
+            <button class="cursor-pointer">Kia</button>
+            <button class="cursor-pointer">Nissan</button>
+            <button class="cursor-pointer">BMW</button>
+            <button class="cursor-pointer">Mercedes</button>
+            <button class="cursor-pointer">Audi</button>
+            <button class="cursor-pointer">Ford</button>
+            <button class="cursor-pointer">Chevrolet</button>
+        </div>
+
+    </div>
 
